sửa text thông báo trong màn cập nhật người xử lý

--- a/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
+++ b/src/app/main/contract-signature/shared/model/edit-handler-dialog/edit-handler-dialog.component.html
@@ -24,7 +24,7 @@
           </div>
           <div class="row">
             <div class="col-1"></div>
-            <span class="col-10 label_detail text-color">- Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số hợp đồng</span>
+            <span class="col-10 label_detail text-color">- Ký USB Token Ban cơ yếu, Sim PKI và Remote Signing không hỗ trợ nhập ô text/số hợp đồng/ký nhiều ô ký cùng lúc</span>
           </div>
         </div>
 
