--- a/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.scss
+++ b/src/app/main/report/report-contract-number-follow-status/report-contract-number-follow-status.component.scss
@@ -9,6 +9,10 @@
 
 .btn_search{
    align-self: flex-end;
+
+   @media (max-width: 992px) {
+    margin-top: 15px;
+  }
 }
 
 .container-fluid{
@@ -18,15 +22,27 @@
   min-height: 80vh;
 }
 
-.btn_submit{
-    border: 0px;
-    border-radius: 5px;
-    height: 33px;
-    box-sizing: border-box;
-    color: white;
-    background-color: #0041C4;
+.btn_submit {
+  border: 0px;
+  border-radius: 5px;
+  height: 33px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #0041c4;
+  font-size: 13px;
+  // margin: 0 10px;
+  width: 100%;
+  @media (max-width: 1580px) {
+    font-size: 11px;
+  }
+
+  @media (max-width: 1485px) {
+    font-size: 9px;
+  }
+
+  @media (max-width: 1399px) {
     font-size: 13px;
-    margin: 0 10px;
+  }
 }
 
 :host ::ng-deep {
