--- a/src/app/main/report/report-contract-receive/report-contract-receive.component.html
+++ b/src/app/main/report/report-contract-receive/report-contract-receive.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
       <!--Tổ chức-->
-      <div class="col-md-2">
+      <div class="col-xxl-2-5 col-lg-4 col-md-6">
           <div>{{'organization' | translate}}</div>
           <div class="input-line">
           <p-treeSelect
@@ -16,7 +16,7 @@
           </div>
       </div>
       
-      <div class="col-md-2">
+      <div class="col-xxl-2-5 col-lg-4 col-md-6">
         <div>{{'contract.information' | translate}}</div>
         <div class="input-line">
           <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ" />
@@ -24,7 +24,7 @@
       </div>
 
       <!--Ngày tạo hợp đồng-->
-      <div class="col-md-2">
+      <div class="col-xxl-2-5 col-lg-4 col-md-6">
           <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
           <div class="input-line">
               <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
@@ -34,7 +34,7 @@
       </div>
 
       <!--Trạng thái-->
-      <div class="col-md-2">
+      <div class="col-xxl-2-5 col-lg-4 col-md-6">
           <div>{{'contract.status' | translate}}</div>
           <div class="input-line">
               <p-dropdown
@@ -52,8 +52,11 @@
       </div>
 
       <!--Button-->
-      <div class="col-md-4 btn_search">
-          <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
+      <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
+        <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
+      </div>
+
+      <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
           <button (click)="export(true)" class="btn btn-lg btn-block btn_submit">Export</button>
       </div>
   </div>
@@ -61,7 +64,7 @@
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;">
-      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="true"
+      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="false"
       scrollDirection="horizontal">
 
           <!--header-->
