--- a/src/app/main/report/report-detail/report-detail.component.html
+++ b/src/app/main/report/report-detail/report-detail.component.html
@@ -1,71 +1,72 @@
 <div class="container-fluid">
-  <div class="row">
-      <!--Tổ chức-->
-      <div class="col-md-2">
-          <div>{{'organization' | translate}}</div>
-          <div class="input-line">
-          <p-treeSelect
-              [(ngModel)]="selectedNodeOrganization"
-              placeholder="{{'all' | translate}}"
-              [filter]="true"
-              filterBy="name"
-              [droppable]="true"
-              [options]="listOrgCombobox"
-          >
-        </p-treeSelect>
-          </div>
-      </div>
-      
-      <div class="col-md-2">
-        <div>{{'contract.information' | translate}}</div>
-        <div class="input-line">
-          <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ" />
+    <div class="row">
+        <!-- Tổ chức -->
+        <div class="col-xxl-2-5 col-lg-4 col-md-6">
+            <div>{{'organization' | translate}}</div>
+            <div class="input-line">
+                <p-treeSelect
+                    [(ngModel)]="selectedNodeOrganization"
+                    placeholder="{{'all' | translate}}"
+                    [filter]="true"
+                    filterBy="name"
+                    [droppable]="true"
+                    [options]="listOrgCombobox"
+                >
+                </p-treeSelect>
+            </div>
         </div>
-      </div>
-
-      <!--Ngày tạo hợp đồng-->
-      <div class="col-md-2">
-          <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
-          <div class="input-line">
-              <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"
-
-              ></p-calendar>
-          </div>
-      </div>
-
-      <!--Trạng thái-->
-      <div class="col-md-2">
-          <div>{{'contract.status' | translate}}</div>
-          <div class="input-line">
-              <p-dropdown
-                  panelStyleClass="font"
-                  appendTo="body"
-                  optionLabel="name"
-                  optionValue="id"
-                  placeholder="{{'all' | translate}}"
-                  [showClear]="true"
-                  [options]="optionsStatus"
-                  [(ngModel)]="contractStatus"
-                  [autoDisplayFirst]="false"
-              ></p-dropdown>
-          </div>
-      </div>
-
-      <!--Button-->
-      <div class="col-md-4 btn_search">
-          <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
-          <button (click)="export(true)" class="btn btn-lg btn-block btn_submit">Export</button>
-      </div>
-  </div>
+    
+        <!-- Hợp đồng -->
+        <div class="col-xxl-2-5 col-lg-4 col-md-6">
+            <div>{{'contract.information' | translate}}</div>
+            <div class="input-line">
+                <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ" />
+            </div>
+        </div>
+    
+        <!-- Ngày tạo hợp đồng -->
+        <div class="col-xxl-2-5 col-lg-4 col-md-6">
+            <div>{{ 'create-date' | translate}} <span style="color: red"> *</span></div>
+            <div class="input-line">
+                <p-calendar selectionMode="range" [readonlyInput]="false" [(ngModel)]="date" [showIcon]="true" dateFormat="dd/mm/yy"></p-calendar>
+            </div>
+        </div>
+    
+        <!-- Trạng thái -->
+        <div class="col-xxl-2-5 col-lg-4 col-md-6">
+            <div>{{'contract.status' | translate}}</div>
+            <div class="input-line">
+                <p-dropdown
+                    panelStyleClass="font"
+                    appendTo="body"
+                    optionLabel="name"
+                    optionValue="id"
+                    placeholder="{{'all' | translate}}"
+                    [showClear]="true"
+                    [options]="optionsStatus"
+                    [(ngModel)]="contractStatus"
+                    [autoDisplayFirst]="false"
+                ></p-dropdown>
+            </div>
+        </div>
+    
+        <!-- Button -->
+        <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
+            <button class="btn btn-lg btn-block btn_submit" (click)="export(false)">{{'btn.report' | translate }}</button>
+        </div>
+    
+        <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
+            <button (click)="export(true)" class="btn btn-lg btn-block btn_submit">Export</button>
+        </div>
+    </div>
+    
 
 
   <!--Bảng dữ liệu-->
   <div class="row" style="padding-top: 20px;min-height: 69vh;">       
-      <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="true"
-      scrollDirection="horizontal" style="" class="tttttt1">
-
+    <p-table #dt [value]="list" [paginator]="false" [rows]="row" id="table" [autoLayout]="true" [scrollable]="false" scrollDirection="horizontal">
           <!--header-->
-          <ng-template pTemplate="headergrouped" class="tttttt">
+          <ng-template pTemplate="headergrouped">
               <!--header 1-->
               <tr>
                   <th *ngFor="let col of cols" [(style)]='col.style' [(colSpan)]="col.colspan" [(rowSpan)]="col.rowspan">
@@ -81,8 +82,8 @@
               </tr>
           </ng-template>
 
-          <ng-template pTemplate="body" let-list let-row="rowIndex" class="ttttt2222">
-              <tr class="test2222222">
+          <ng-template pTemplate="body" let-list let-row="rowIndex">
+              <tr>
                   <ng-container style="background-color: #EEF7FF;" *ngIf="row == 0">
                       <td style="font-style: normal;font-weight: 800;font-size: 13px;">{{this.orgName}}</td>
                       <td *ngFor="let i of Arr(mergeCol.length - 1).fill(1)"></td>
