--- a/src/app/main/report/report-eKYC/report-eKYC.component.html
+++ b/src/app/main/report/report-eKYC/report-eKYC.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <!--Tổ chức-->
-    <div class="col-md-2">
+    <div class="col-xxl-3-5 col-lg-6 col-md-6">
       <div>{{'organization' | translate}}</div>
       <div class="input-line">
         <p-treeSelect #nameContract [(ngModel)]="selectedNodeOrganization" [filter]="true" filterBy="name"
@@ -11,7 +11,7 @@
     </div>
     
     <!--Thời gian gửi-->
-    <div class="col-md-2">
+    <div class="col-xxl-3-5 col-lg-6 col-md-6">
       <div>{{ 'time.authen' | translate}}
         <!-- <span style="color: red"> *</span> -->
       </div>
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Thông tin hợp đồng -->
-    <div class="col-md-3">
+    <div class="col-xxl-3-5 col-lg-6 col-md-6">
       <div>{{'contract.information' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Họ tên, CMT/CCCD, Tên HĐ, Mã HĐ, Số HĐ" />
@@ -33,11 +33,20 @@
 
 
     <!--Button-->
-    <div class="col-md-4 btn_search">
+
+    <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
+      <button class="btn btn-lg btn-block btn_submit" (click)="exportEKYCReportCall(false)">{{'btn.report' | translate}}</button>
+    </div>
+
+    <div class="col-xxl-1 col-lg-2 col-md-3 btn_search">
+      <button class="btn btn-lg btn-block btn_submit" (click)="exportEKYCReportCall(true)">Export</button>
+    </div>
+
+    <!-- <div class="col-md-4 btn_search">
       <button class="btn btn-lg btn-block btn_submit" (click)="exportEKYCReportCall(false)">{{'btn.report' | translate
         }}</button>
       <button class="btn btn-lg btn-block btn_submit" (click)="exportEKYCReportCall(true)">Export</button>
-    </div>
+    </div> -->
   </div>
 
 
