--- a/src/app/main/customer/customer.component.html
+++ b/src/app/main/customer/customer.component.html
@@ -3,13 +3,13 @@
 <div class="container-fluid">
   <p-selectButton [options]="stateOptions" [(ngModel)]="isOrg" optionLabel="label" optionValue="value" (onChange)="onSelect($event)">
     <ng-template #options let-item>
-        <span style="margin: auto;width: 50%;">{{item.label | translate}}</span>
+      <span style="margin: auto;width: 50%;">{{item.label | translate}}</span>
     </ng-template>
   </p-selectButton>
 <div class="col-md-12" style="padding-top: 20px;">
-  <div class="input-line search" style="justify-content:left">
+  <div class="input-line search" style="justify-content:left; border: none; background-color: #F1F5FE;">
       <img src="../../assets/img/icon_search.svg" class="input-img" />
-      <input type="text" id="filter_name" [value]="filter_name" class="input-text" style="width: 90%!important"
+      <input type="text" id="filter_name" [value]="filter_name" class="input-text" style=" width: 90%!important"
       placeholder="{{getPlaceholderFind() | translate}}" (keyup)="autoSearch($event)" />
   </div>
 </div>
