--- a/src/app/main/unit/unit.component.scss
+++ b/src/app/main/unit/unit.component.scss
@@ -12,33 +12,38 @@
 .container-fluid{
   background-color: #FFFFFF;
   border-radius: 12px;
+  padding-top: 16px;
 }
 
 .btn_submit_search {
   border: 1px solid rgba(0, 26, 77, 0.10);
   border-radius: 8px;
-  height: 35px;
+  width: 130px;
+  height: 42px;
   box-sizing: border-box;
   color: #001A4D;
   background-color: #FFFFFF;
   font-size: 13px;
-  margin: 0 10px;
+  margin: 0 8px;
   box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
   font-style: normal;
-  font-weight: 700;
+  line-height: normal;
+  font-weight: 600;
 }
 
 .btn_submit_add {
   border: 0px;
   border-radius: 8px;
-  height: 35px;
+  width: 130px;
+  height: 42px;
   box-sizing: border-box;
   color: white;
   background-color: #0041C4;
   font-size: 13px;
   margin: 0 10px;
+  line-height: normal;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 input[type="file"] {
@@ -66,12 +71,14 @@ input[type="file"] {
 }
 
 .input_text {
-    padding-left: 10px;
+    width: 420px;
+    padding-left: 16px;
     outline: none;
-    height: 33px;
+    height: 42px;
     width: 100%;
-    border-radius: 5px;
-    border: 1px solid #106DB6;
+    border-radius: 8px;
+    // border: 1px solid #106DB6;
+    border: none;
     background: #F1F5FE;
 }
 .btn_search{
