--- a/src/app/main/user/user.component.scss
+++ b/src/app/main/user/user.component.scss
@@ -1,7 +1,8 @@
-.btn_submit{
+.btn_submit, .btn_submit a {
   border: 0px;
   border-radius: 8px;
-  height: 35px;
+  width: 130px;
+  height: 42px;
   box-sizing: border-box;
   color: white;
   background-color: #0041C4;
@@ -9,25 +10,32 @@
   margin: 0 10px;
   font-style: normal;
   font-weight: 700;
+  text-decoration: none;
 }
 
 .btn_submit_search {
   border: 1px solid rgba(0, 26, 77, 0.10);
   border-radius: 8px;
-  height: 35px;
+  width: 130px;
+  height: 42px;
   box-sizing: border-box;
   color: #001A4D;
   background-color: #FFFFFF;
   font-size: 13px;
-  margin: 0 10px;
+  margin: 0 8px;
   box-shadow: 0px 3px 12px 0px rgba(16, 85, 225, 0.10);
-  font-style: normal;
-  font-weight: 700;
+  line-height: normal;
+  font-weight: 600;
+}
+
+.selectedNodeOrganizationCombobox {
+  background-color: red;
 }
 
 .container-fluid{
   background-color: #FFFFFF;
   border-radius: 12px;
+  padding-top: 16px;
 }
 
 input[type="file"] {
@@ -46,13 +54,20 @@ input[type="file"] {
 }
 
 .input_text {
-  padding-left: 10px;
+  width: 420px;
+  // padding-left: 16px;
   outline: none;
-  height: 33px;
+  width: 130px;
+  height: 42px;
   width: 100%;
-  border-radius: 5px;
-  border: 1px solid #106DB6;
+  border-radius: 8px;
+  // border: 1px solid #106DB6;
+  border: none;
+  padding-left: 0;
+  margin: 0;
   background: #F1F5FE;
+  line-height: normal;
+  vertical-align: middle;
 }
 .btn_search{
   align-self: flex-end;
@@ -158,12 +173,14 @@ padding: 8px;
 }
 :host ::ng-deep {
   .p-treeselect, .p-dropdown {
-      border: 1px solid #106DB6;
-      border-radius: 5px;
-      height: 33px;
+      background-color: #F1F5FE;
+      border: none;
+      border-radius: 8px;
+      height: 42px;
       width: 100%;
       outline: 0;
       color: black !important;
+      align-items: center;
   }
   .p-treeselect-label, .p-dropdown-label {
       padding: 5px 5px 5px 15px;
